{
    "name": "MainMenu",
    "maps": [
        {
            "name": "MainMenuActionMap",
            "id": "adae7b6e-a105-4f40-a60b-23473dfa5d7d",
            "actions": [
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "12db0cf0-b728-4dfb-b598-54c670e02c96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9f5dc45-c6fd-4280-b252-243ac5e8e37c",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}